# ezpy

./: .gitignore  Cargo.toml  README.md  test.m
.github/workflows/: deploy_book.yml  release.yml
binaries/cspython/: Cargo.toml
binaries/cspython/src/: main.rs
binaries/epython/: Cargo.toml
binaries/epython/src/: main.rs
binaries/ezpy/: Cargo.toml
binaries/ezpy/src/: install.rs  main.rs  pin.rs  venv.rs
binaries/tz/: Cargo.toml
binaries/tz/src/: main.rs
binaries/zython/: Cargo.toml
binaries/zython/src/: main.rs
binaries/zz/: Cargo.toml
binaries/zz/src/: main.rs  zz.rs
binaries/zz/src/zz/: cxx.rs  python.rs  rust.rs  zed.rs
docs/: book.toml
docs/src/: SUMMARY.md  cspython.md
libraries/indygreg/: Cargo.toml  README.md
libraries/indygreg/src/: install.rs  lib.rs  metadata.rs  package.rs  query.rs
libraries/script/: Cargo.toml
libraries/script/src/: lib.rs
libraries/uv/: Cargo.toml
libraries/uv/src/: lib.rs  python.rs
src/: indygreg.rs  install.rs  main.rs  target.rs  uv.rs  venv.rs
src/indygreg/: cpython.rs  download.rs
src/install/: targz.rs
src/uv/: install.rs
