[workspace]
members = ["binaries/ezpy", "binaries/tz", "libraries/indygreg"]
resolver = "2"

[workspace.package]
version = "0.3.1"
description = ""
edition = "2021"
documentation = ""
license = "Apache-2.0"
repository = "https://github.com/Hennzau/ezpy"

[workspace.dependencies]
indygreg = { path = "libraries/indygreg" }

eyre = "0.6.12"
tokio = { version = "1.40.0", features = ["full"] }
clap = { version = "4.5.13", features = ["derive"] }
