[package]
name = "cspython"
version.workspace = true
description.workspace = true
edition.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
uv = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
