[package]
name = "ezpy"
version.workspace = true
description.workspace = true
edition.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eyre = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
indygreg = { workspace = true }
simple-home-dir = "0.4.3"
