[package]
name = "zz"
version.workspace = true
edition.workspace = true
documentation.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
uv = { workspace = true }
script = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true }
ratatui = "0.28.1"
crossterm = "0.28.1"
strum = "0.26.3"
