[package]
name = "indygreg"
version.workspace = true
description.workspace = true
edition.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = { workspace = true }
tokio = { workspace = true }
simple-home-dir = "0.4.3"
flate2 = "1.0"
tar = "0.4"
