[package]
name = "uv"
version.workspace = true
edition.workspace = true
documentation.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
simple-home-dir = "0.4.2"
eyre = { workspace = true }
tokio = { workspace = true }
script = { workspace = true }
